testsuite/poke.pkl/cast-diag-2.pk
/* { dg-do compile } */

defun foo = void:
  {
   defvar v = 10 as fun()void:; /* { dg-error "" } */
  }
